kubernetes/apps/security/kyverno/policies/ndots.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/kyverno.io/clusterpolicy_v1.json
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: &name ndots
  annotations:
    policies.kyverno.io/title: Add ndots
    policies.kyverno.io/category: DNS Optimization
    policies.kyverno.io/severity: low
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      The ndots value controls where DNS lookups are first performed in a cluster
      and needs to be set to a lower value than the default of 5 in some cases.
      This policy mutates all Pods to add the ndots option with a value of 1.
    pod-policies.kyverno.io/autogen-controllers: none
spec:
  rules:
    - name: *name
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaceSelector:
                matchExpressions:
                  - key: kyverno.io/ndots
                    operator: Exists
      exclude:
        any:
          - resources:
              kinds:
                - Pod
              annotations:
                kyverno.io/exclude: "true"
          - resources:
              kinds:
                - Pod
              namespaceSelector:
                matchLabels:
                  kyverno.io/exclude: "true"
      mutate:
        patchStrategicMerge:
          spec:
            dnsConfig:
              options:
                - name: ndots
                  value: "1"
