kubernetes/apps/security/kyverno/policies/restrict-latest-tag.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/kyverno.io/clusterpolicy_v1.json
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-latest-tag
  annotations:
    policies.kyverno.io/title: Restrict Latest Tag
    policies.kyverno.io/category: Best Practices
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      Images using the "latest" tag or no tag at all cannot be tracked or
      updated by Renovate. This policy audits Pods using unversioned images.
      Skipped for namespaces labeled kyverno.io/exclude: "true".
    pod-policies.kyverno.io/autogen-controllers: none
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: require-image-tag
      match:
        any:
          - resources:
              kinds:
                - Pod
      exclude:
        any:
          - resources:
              kinds:
                - Pod
              namespaceSelector:
                matchLabels:
                  kyverno.io/exclude: "true"
      validate:
        message: "An image tag is required."
        foreach:
          - list: "request.object.spec.containers"
            pattern:
              image: "*:*"
          - list: "request.object.spec.initContainers"
            pattern:
              image: "*:*"
          - list: "request.object.spec.ephemeralContainers"
            pattern:
              image: "*:*"
    - name: validate-image-tag
      match:
        any:
          - resources:
              kinds:
                - Pod
      exclude:
        any:
          - resources:
              kinds:
                - Pod
              namespaceSelector:
                matchLabels:
                  kyverno.io/exclude: "true"
      validate:
        message: "Using a mutable image tag e.g. 'latest' is not allowed."
        foreach:
          - list: "request.object.spec.containers"
            pattern:
              image: "!*:latest"
          - list: "request.object.spec.initContainers"
            pattern:
              image: "!*:latest"
          - list: "request.object.spec.ephemeralContainers"
            pattern:
              image: "!*:latest"
